            Bangle.js1/2: Fix showMenu/showScroller spacing with back if no widgets loaded (ref #2286)
            Bangle.js1: Bangle.setUI({back}) now responds to BTN3 if there were no other watches on buttons
            ESP32: Allow up to 16k vars (if enough memory), allow non-active scan, and remove 30s BLE scan limit

     2v16 : JIT functions now execute in their own function scope (allows arguments)
            Move older 'HY' boards to use `g` for the built-in graphics, not `LCD` (and change docs)
            Fix print(()=>{}) printing 'function (undefined) {}' - saves 1 var for arrow fn without args (fix #2265)
            Bangle.js: Add support for `Bangle.setUI({remove:...})` to allow apps to be unloaded without a full reboot.
            Bangle.js2: Fixed `Bangle.setLCDOverlay(img,x,y)` with negative offsets
            Allow `atob` to accept base64 with whitespace inside it
            Puck.js Lite: remove NFC from build (no NFC on board the Lite version)
            Storage: When using Filename Table, be absolutely sure it's correct before using it (stops hang at startup if storage corrupt)
            Bangle.js: Add Bangle.setOptions({btnLoadTimeout:...}) to allow home button timeout to be configurable
            Bangle.js: A forced interrupt after button held now occurs 0.5s (not 0.1s) after the reboot request
            Bangle.js: Holding the button during storage compact now won't try and break out of it
            Bangle.js: Use 4k/64k/all flash clear commands to make erasing (and hence compact) external flash faster
            Bangle.js2: Add built-in touchscreen calibration
            Bangle.js2: Add fast-path for all-white or all-black full-width graphics fill/clear (24ms -> 2ms)
            Bangle.js2: LCD background flip (send to LCD while returning to execute other code)
            Bangle.js2: Swipe direction is now modified based on g.setRotation